--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -1,6 +1,133 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "0441662d",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a3327118",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.io\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7490402",
+   "metadata": {},
+   "source": [
+    "# Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "26f2d77c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'> (1, 1) [('train_images', 'O'), ('test_images', 'O'), ('train_labels', 'O'), ('test_labels', 'O')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat_data = scipy.io.loadmat('./data/mnistAll.mat')\n",
+    "mnist_data = mat_data['mnist']\n",
+    "print(type(mnist_data), mnist_data.shape, mnist_data.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e5345381",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(28, 28, 60000) (28, 28, 10000) (60000, 1) (10000, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_images = mnist_data['train_images'][0, 0]\n",
+    "test_images = mnist_data['test_images'][0, 0]\n",
+    "train_labels = mnist_data['train_labels'][0, 0]\n",
+    "test_labels = mnist_data['test_labels'][0, 0]\n",
+    "\n",
+    "print(train_images.shape, test_images.shape, train_labels.shape, test_labels.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae936a27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.15"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
