--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -50,34 +50,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "e5345381",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(28, 28, 60000) (28, 28, 10000) (60000, 1) (10000, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_images = mnist_data['train_images'][0, 0]\n",
-    "test_images = mnist_data['test_images'][0, 0]\n",
-    "train_labels = mnist_data['train_labels'][0, 0]\n",
-    "test_labels = mnist_data['test_labels'][0, 0]\n",
-    "\n",
-    "print(train_images.shape, test_images.shape, train_labels.shape, test_labels.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae936a27",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# load images\n",
+    "train_images = mnist_data['train_images'][0, 0].T.squeeze()\n",
+    "test_images = mnist_data['test_images'][0, 0].T.squeeze()\n",
+    "train_labels = mnist_data['train_labels'][0, 0].T.squeeze()\n",
+    "test_labels = mnist_data['test_labels'][0, 0].T.squeeze()\n",
+    "# find idxs that are of 3 and 7\n",
+    "train_filter = np.where((train_labels == 3) | (train_labels == 7))[0].squeeze()\n",
+    "test_filter = np.where((test_labels == 3) | (test_labels == 7))[0]\n",
+    "\n",
+    "# filter only images and labels of 3 and 7\n",
+    "train_images = train_images[train_filter]\n",
+    "train_labels = train_labels[train_filter]\n",
+    "test_images = test_images[test_filter]\n",
+    "test_labels = test_labels[test_filter]\n",
+    "\n",
+    "# group all images and labels\n",
+    "images = np.concatenate((train_images, test_images))\n",
+    "labels = np.concatenate((train_labels, test_labels))\n",
+    "\n",
+    "# re-split images into training and test set\n",
+    "train_images = images[:int(.8*len(images))]\n",
+    "test_images = images[int(.8*len(images)):]\n",
+    "train_labels = labels[:int(.8*len(labels))]\n",
+    "test_labels = labels[int(.8*len(labels)):]"
+   ]
   }
  ],
  "metadata": {
@@ -96,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.11.4"
   },
   "varInspector": {
    "cols": {
