--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -1238,9 +1238,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cfc49e0a-2165-4cab-9519-21a4df6d3a45",
+   "metadata": {},
+   "source": [
+    "## Newton Method"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b888ab02-42cd-42b8-9fd3-f76f3a936b16",
+   "id": "91ec70c9-577c-41af-97c4-ae02f3ed5c13",
    "metadata": {},
    "outputs": [],
    "source": []
