--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "26f2d77c",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e5345381",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0b7b09af-02a6-49d6-802e-b100f214bcb8",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5b60215d-00c5-42ea-83bf-db62f1cc7324",
    "metadata": {},
    "outputs": [],
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "55dd78e6-112e-478f-b2ed-1bd7e94d343e",
    "metadata": {},
    "outputs": [],
@@ -1200,6 +1200,7 @@
     }
    ],
    "source": [
+    "# training loop\n",
     "alpha = 0.1\n",
     "\n",
     "for eta in learning_rates:\n",
@@ -1247,11 +1248,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "91ec70c9-577c-41af-97c4-ae02f3ed5c13",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# redefine gradient\n",
+    "def gradient(x, y_pred, t, alpha, w):\n",
+    "    nll_gradient = np.dot(x.T, (y_pred - t)) / len(x)\n",
+    "    regularization_gradient = alpha * w\n",
+    "    return nll_gradient + regularization_gradient\n",
+    "\n",
+    "def hessian(X, y_pred, alpha):\n",
+    "    R = np.diagflat(y_pred * (1 - y_pred))\n",
+    "    H = X.T @ R @ X + alpha * np.eye(X.shape[1])\n",
+    "    return H"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "424ef48c-061e-4f92-bdad-2f6e42d8a8ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# redefine train\n",
+    "def train(x, t, w, learning_rate, epochs, alpha, x_val=None, t_val=None):\n",
+    "    train_errors = []\n",
+    "    val_errors = []\n",
+    "\n",
+    "    best_train_error = float('inf')\n",
+    "    best_val_error = float('inf')\n",
+    "\n",
+    "    for epoch in range(epochs):\n",
+    "        y_pred = predict(x, w)\n",
+    "        current_train_error = NLL(y_pred, t)\n",
+    "        train_errors.append(current_train_error)\n",
+    "        \n",
+    "        best_train_error = min(best_train_error, current_train_error)\n",
+    "        \n",
+    "        if x_val is not None and t_val is not None:\n",
+    "            y_val_pred = predict(x_val, w)\n",
+    "            current_val_error = NLL(y_val_pred, t_val)\n",
+    "            val_errors.append(current_val_error)\n",
+    "        \n",
+    "            # Early stopping\n",
+    "            if current_val_error > best_val_error:\n",
+    "                break\n",
+    "            \n",
+    "            best_val_error = min(best_val_error, current_val_error)\n",
+    "        \n",
+    "        grad = gradient(x, y_pred, t, alpha, w)\n",
+    "        H = hessian(x, y_pred, alpha)\n",
+    "        delta_w = -np.linalg.inv(H) @ grad\n",
+    "        w += learning_rate * delta_w\n",
+    "\n",
+    "    return w, train_errors, val_errors, best_train_error, best_val_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "979963cd-1464-4e85-9446-19fe6c6122c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# training loop\n",
+    "alpha = 0.1\n",
+    "\n",
+    "for eta in learning_rates:\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "    w, train_errors, val_errors, best_train_error, best_val_error = train(train_images_bias, train_labels, w_init.copy(), eta, 10, alpha, val_images_bias, val_labels)\n",
+    "    \n",
+    "    end_time = time.time()\n",
+    "    elapsed_time = end_time - start_time\n",
+    "\n",
+    "    plt.plot(train_errors, label=f'Train (η={eta}, α={alpha})')\n",
+    "    plt.plot(val_errors, label=f'Validation (η={eta}, α={alpha})')\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.ylabel('Negative Log Likelihood')\n",
+    "    plt.legend()\n",
+    "    plt.title('Error vs. Epochs')\n",
+    "    plt.show()\n",
+    "\n",
+    "    y_train_pred = predict(train_images_bias, w)\n",
+    "    train_misclass_rate = misclassification_rate(y_train_pred, train_labels)\n",
+    "\n",
+    "    y_val_pred = predict(val_images_bias, w)\n",
+    "    val_misclass_rate = misclassification_rate(y_val_pred, val_labels)\n",
+    "\n",
+    "    y_test_pred = predict(test_images_bias, w)\n",
+    "    test_error = NLL(y_test_pred, test_labels)\n",
+    "    test_misclass_rate = misclassification_rate(y_test_pred, test_labels)\n",
+    "\n",
+    "    print(f\"Best training error with (η={eta}, α={alpha}): {best_train_error}\")\n",
+    "    print(f\"Best validation error with (η={eta}, α={alpha}): {best_val_error}\")\n",
+    "    print(f\"Test error with (η={eta}, α={alpha}): {test_error}\")\n",
+    "    print(f\"Training misclassification rate: {train_misclass_rate}\")\n",
+    "    print(f\"Validation misclassification rate: {val_misclass_rate}\")\n",
+    "    print(f\"Test misclassification rate: {test_misclass_rate}\")\n",
+    "    print(f\"Training time (η={eta}, α={alpha}): {elapsed_time} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91598418-5cc3-4448-be64-21990da00f16",
+   "metadata": {},
+   "source": [
+    "## Line Search"
+   ]
   }
  ],
  "metadata": {
