--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -1292,7 +1292,7 @@
     "            current_val_error = NLL(y_val_pred, t_val)\n",
     "            val_errors.append(current_val_error)\n",
     "        \n",
-    "            # Early stopping\n",
+    "            # early stopping\n",
     "            if current_val_error > best_val_error:\n",
     "                break\n",
     "            \n",
@@ -1488,7 +1488,7 @@
     "            current_val_error = NLL(y_val_pred, t_val)\n",
     "            val_errors.append(current_val_error)\n",
     "        \n",
-    "            # Early stopping\n",
+    "            # early stopping\n",
     "            if current_val_error > best_val_error:\n",
     "                break\n",
     "            \n",
