--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -1394,11 +1394,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "2f879ed7-53a2-4bf0-994d-27a549d23401",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "If the dimensionality $n$ increases, while the number of parameters $w$ stays the same, the model will have a harder time learning the underlying distribution, because the number of parameters is not sufficient to describe the data. This could lead to overfitting, because the model will try to fit the data as well as possible, but will not be able to generalize well. \n",
+    "\n",
+    "If the number of parameters $w$ increases, while the dimensionality $n$ stays the same, the model would likely overfit on the training data, because it can fit the training data too well, resulting in poor generalization.\n",
+    "\n",
+    "If there were more samples $N$, the final results would probably improve, because with more samples, the dataset is a better representation of the true data distribution, allowing the model to learn more accurately what parameter values describe the data best. This is of course only true if the samples are representative of the true data distribution. Adding samples that are not representative of the true data distribution could lead to worse results.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b74b2e84",
+   "metadata": {},
    "source": []
   }
  ],
