--- a/assignment5.ipynb
+++ b/assignment5.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "37fee738-c968-4c9c-8eb8-52982447b96e",
    "metadata": {},
    "outputs": [],
@@ -37,6 +37,8 @@
     "from __future__ import absolute_import, division, print_function, unicode_literals\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import datasets, layers, models, regularizers\n",
+    "from tensorflow.keras import backend as K\n",
+    "from keras.callbacks import EarlyStopping\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -384,6 +386,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5fd6c4ba-b01c-4761-ac6e-7a13c05b3602",
+   "metadata": {},
+   "source": [
+    "## Utility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5097cd91-0725-428b-b940-1ab0ce3fc3a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f1_score(y_true, y_pred):\n",
+    "    true_positives = K.sum(K.round(K.clip(y_true * y_pred, 0, 1)))\n",
+    "    possible_positives = K.sum(K.round(K.clip(y_true, 0, 1)))\n",
+    "    predicted_positives = K.sum(K.round(K.clip(y_pred, 0, 1)))\n",
+    "    precision = true_positives / (predicted_positives + K.epsilon())\n",
+    "    recall = true_positives / (possible_positives + K.epsilon())\n",
+    "    f1_val = 2*(precision*recall)/(precision+recall+K.epsilon())\n",
+    "    return f1_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1a6e6d40-3083-405f-84e8-039161dfafac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "early_stop = EarlyStopping(monitor='val_loss', patience=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e37ab09b-1378-4263-88c9-47b4274f8d53",
    "metadata": {},
    "source": [
@@ -392,6 +429,143 @@
     "Modify the provided MLP model. Use architectures with 0, 1 and 2 hidden layers. Keep the complexity of the model bounded, so runs do not take much more than 1 hour to reach the maximum of testing accuracy. Notice that the input needs to be \"flattened\", since there is no spatial structure \n",
     "in this fully connected design. This can be achieved by adding a dummy layer with no free parameters with \"layers.Flatten()\" as the first layer in the constructor \"model.Sequential()\". Obtain the learning curves and discuss the results.\n",
     "Report the optimizer in use, initialization parameters, the learning rate, etc. Is early stopping convenient in this model?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b015364-b9f1-4d32-84c0-6c3e127808b4",
+   "metadata": {},
+   "source": [
+    "### Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "279f9300-adfa-4158-a9e5-df1f8d02af83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 0 layers\n",
+    "mlp_0_layer = models.Sequential([\n",
+    "    layers.Flatten(),\n",
+    "    layers.Dense(10, activation='softmax')])\n",
+    "mlp_0_layer.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# 1 layer\n",
+    "mlp_1_layer = models.Sequential([\n",
+    "    layers.Flatten(),\n",
+    "    layers.Dense(1536, activation='relu'),\n",
+    "    layers.Dense(10, activation='softmax')\n",
+    "])\n",
+    "mlp_1_layer.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# 2 layers\n",
+    "mlp_2_layer = models.Sequential([\n",
+    "    layers.Flatten(),\n",
+    "    layers.Dense(1536, activation='relu'),\n",
+    "    layers.Dense(768, activation='relu'),\n",
+    "    layers.Dense(10, activation='softmax')\n",
+    "])\n",
+    "mlp_2_layer.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50bde6a2-49c4-472a-995b-67ef3f931ec3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.9664 - accuracy: 0.3148 - f1_score: 4.9249 - val_loss: 1.8684 - val_accuracy: 0.3643 - val_f1_score: 4.5756\n",
+      "Epoch 2/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.8827 - accuracy: 0.3528 - f1_score: 4.4040 - val_loss: 1.8204 - val_accuracy: 0.3597 - val_f1_score: 4.8966\n",
+      "Epoch 3/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.8577 - accuracy: 0.3638 - f1_score: 4.2618 - val_loss: 1.9173 - val_accuracy: 0.3362 - val_f1_score: 4.2669\n",
+      "Epoch 4/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.8399 - accuracy: 0.3714 - f1_score: 4.1947 - val_loss: 1.8484 - val_accuracy: 0.3598 - val_f1_score: 4.7534\n",
+      "Epoch 5/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.8291 - accuracy: 0.3763 - f1_score: 4.1053 - val_loss: 1.8071 - val_accuracy: 0.3717 - val_f1_score: 4.5325\n",
+      "Epoch 6/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.8246 - accuracy: 0.3762 - f1_score: 4.1013 - val_loss: 1.8346 - val_accuracy: 0.3591 - val_f1_score: 4.1456\n",
+      "Epoch 7/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.8301 - accuracy: 0.3742 - f1_score: 4.0194 - val_loss: 1.8003 - val_accuracy: 0.3646 - val_f1_score: 4.1642\n",
+      "Epoch 8/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.8148 - accuracy: 0.3829 - f1_score: 4.0237 - val_loss: 1.8031 - val_accuracy: 0.3769 - val_f1_score: 4.1688\n",
+      "Epoch 9/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.8025 - accuracy: 0.3871 - f1_score: 4.0059 - val_loss: 1.8784 - val_accuracy: 0.3638 - val_f1_score: 3.9662\n",
+      "Epoch 10/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.8062 - accuracy: 0.3838 - f1_score: 3.9698 - val_loss: 1.7994 - val_accuracy: 0.3736 - val_f1_score: 4.2015\n",
+      "Epoch 11/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7974 - accuracy: 0.3866 - f1_score: 3.9761 - val_loss: 1.7807 - val_accuracy: 0.3843 - val_f1_score: 4.2500\n",
+      "Epoch 12/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7995 - accuracy: 0.3882 - f1_score: 3.9396 - val_loss: 1.8806 - val_accuracy: 0.3524 - val_f1_score: 4.1607\n",
+      "Epoch 13/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7961 - accuracy: 0.3903 - f1_score: 3.9167 - val_loss: 2.0245 - val_accuracy: 0.3368 - val_f1_score: 3.7909\n",
+      "Epoch 14/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7906 - accuracy: 0.3913 - f1_score: 3.9196 - val_loss: 1.7826 - val_accuracy: 0.3874 - val_f1_score: 4.0359\n",
+      "Epoch 15/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7896 - accuracy: 0.3928 - f1_score: 3.8970 - val_loss: 1.8446 - val_accuracy: 0.3706 - val_f1_score: 3.7871\n",
+      "Epoch 16/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7760 - accuracy: 0.3939 - f1_score: 3.9034 - val_loss: 1.9401 - val_accuracy: 0.3455 - val_f1_score: 3.6314\n",
+      "Epoch 17/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7836 - accuracy: 0.3954 - f1_score: 3.8896 - val_loss: 1.8312 - val_accuracy: 0.3629 - val_f1_score: 3.9188\n",
+      "Epoch 18/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7842 - accuracy: 0.3945 - f1_score: 3.8786 - val_loss: 1.8876 - val_accuracy: 0.3615 - val_f1_score: 3.9227\n",
+      "Epoch 19/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7760 - accuracy: 0.3931 - f1_score: 3.8529 - val_loss: 1.8006 - val_accuracy: 0.3766 - val_f1_score: 4.1830\n",
+      "Epoch 20/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7813 - accuracy: 0.3934 - f1_score: 3.8392 - val_loss: 1.7676 - val_accuracy: 0.3962 - val_f1_score: 4.0317\n",
+      "Epoch 21/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7802 - accuracy: 0.3946 - f1_score: 3.8531 - val_loss: 1.7929 - val_accuracy: 0.3897 - val_f1_score: 3.8059\n",
+      "Epoch 22/1000\n",
+      "1157/1563 [=====================>........] - ETA: 1s - loss: 1.7597 - accuracy: 0.4006 - f1_score: 3.8439"
+     ]
+    }
+   ],
+   "source": [
+    "# fitting for 0 layer model\n",
+    "mlp_0_layer.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy', f1_score])\n",
+    "\n",
+    "history_mlp_0_layer = mlp_0_layer.fit(train_images, train_labels, epochs=1000,\n",
+    "                    validation_data=(test_images, test_labels), callbacks=[early_stop])\n",
+    "\n",
+    "mlp_0_layer.summary()\n",
+    "\n",
+    "test_loss, test_acc = mlp_0_layer.evaluate(test_images, test_labels)\n",
+    "\n",
+    "# plotting\n",
+    "plt.figure(figsize=(12, 5))\n",
+    "# accuracy\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(history_mlp_0_layer.history['accuracy'], label='accuracy')\n",
+    "plt.plot(history_mlp_0_layer.history['val_accuracy'], label='validation accuracy')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.title('Accuracy vs. Epoch')\n",
+    "# F1-score\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(history_mlp_0_layer.history['f1_score'], label='F1-score')\n",
+    "plt.plot(history_mlp_0_layer.history['val_f1_score'], label='validation F1-score')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('F1-score')\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.title('F1-score vs. Epoch')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
