--- a/assignment5.ipynb
+++ b/assignment5.ipynb
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "50bde6a2-49c4-472a-995b-67ef3f931ec3",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,47 @@
       "Epoch 21/1000\n",
       "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7802 - accuracy: 0.3946 - f1_score: 3.8531 - val_loss: 1.7929 - val_accuracy: 0.3897 - val_f1_score: 3.8059\n",
       "Epoch 22/1000\n",
-      "1157/1563 [=====================>........] - ETA: 1s - loss: 1.7597 - accuracy: 0.4006 - f1_score: 3.8439"
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7718 - accuracy: 0.3974 - f1_score: 3.8400 - val_loss: 1.9167 - val_accuracy: 0.3466 - val_f1_score: 4.0988\n",
+      "Epoch 23/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7650 - accuracy: 0.4005 - f1_score: 3.8365 - val_loss: 1.8644 - val_accuracy: 0.3613 - val_f1_score: 3.7356\n",
+      "Epoch 24/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7710 - accuracy: 0.3973 - f1_score: 3.8348 - val_loss: 1.9628 - val_accuracy: 0.3391 - val_f1_score: 3.3917\n",
+      "Epoch 25/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7609 - accuracy: 0.4005 - f1_score: 3.8411 - val_loss: 1.9829 - val_accuracy: 0.3299 - val_f1_score: 3.3018\n",
+      "Epoch 26/1000\n",
+      "1563/1563 [==============================] - 7s 4ms/step - loss: 1.7693 - accuracy: 0.3982 - f1_score: 3.7980 - val_loss: 1.8037 - val_accuracy: 0.3825 - val_f1_score: 3.9101\n",
+      "Epoch 27/1000\n",
+      "1563/1563 [==============================] - 7s 4ms/step - loss: 1.7708 - accuracy: 0.3988 - f1_score: 3.7885 - val_loss: 1.8362 - val_accuracy: 0.3751 - val_f1_score: 3.7054\n",
+      "Epoch 28/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7651 - accuracy: 0.4005 - f1_score: 3.8103 - val_loss: 1.8516 - val_accuracy: 0.3796 - val_f1_score: 4.0690\n",
+      "Epoch 29/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7673 - accuracy: 0.4002 - f1_score: 3.7907 - val_loss: 1.8427 - val_accuracy: 0.3591 - val_f1_score: 3.8735\n",
+      "Epoch 30/1000\n",
+      "1563/1563 [==============================] - 6s 4ms/step - loss: 1.7592 - accuracy: 0.3993 - f1_score: 3.7939 - val_loss: 1.8795 - val_accuracy: 0.3575 - val_f1_score: 3.8325\n",
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "flatten_3 (Flatten)          (None, 3072)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 10)                30730     \n",
+      "=================================================================\n",
+      "Total params: 30,730\n",
+      "Trainable params: 30,730\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "313/313 [==============================] - 1s 3ms/step - loss: 1.8795 - accuracy: 0.3575 - f1_score: 3.8325\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 11\u001b[0m\n\u001b[0;32m      6\u001b[0m history_mlp_0_layer \u001b[38;5;241m=\u001b[39m mlp_0_layer\u001b[38;5;241m.\u001b[39mfit(train_images, train_labels, epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m,\n\u001b[0;32m      7\u001b[0m                     validation_data\u001b[38;5;241m=\u001b[39m(test_images, test_labels), callbacks\u001b[38;5;241m=\u001b[39m[early_stop])\n\u001b[0;32m      9\u001b[0m mlp_0_layer\u001b[38;5;241m.\u001b[39msummary()\n\u001b[1;32m---> 11\u001b[0m test_loss, test_acc \u001b[38;5;241m=\u001b[39m mlp_0_layer\u001b[38;5;241m.\u001b[39mevaluate(test_images, test_labels)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# plotting\u001b[39;00m\n\u001b[0;32m     14\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m5\u001b[39m))\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
      ]
     }
    ],
