--- a/assignment5.ipynb
+++ b/assignment5.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "37fee738-c968-4c9c-8eb8-52982447b96e",
    "metadata": {},
    "outputs": [],
@@ -38,8 +38,12 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras import datasets, layers, models, regularizers\n",
     "from tensorflow.keras import backend as K\n",
-    "from keras.callbacks import EarlyStopping\n",
-    "import matplotlib.pyplot as plt"
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.callbacks import EarlyStopping, ModelCheckpoint\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "RNDS = 1389"
    ]
   },
   {
@@ -52,20 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5166c142-852a-43a4-b20f-f74b80f50df6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-      "170500096/170498071 [==============================] - 578s 3us/step\n",
-      "170508288/170498071 [==============================] - 578s 3us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(train_images, train_labels), (test_images, test_labels) = datasets.cifar10.load_data()\n",
     "\n",
@@ -394,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "5097cd91-0725-428b-b940-1ab0ce3fc3a4",
    "metadata": {},
    "outputs": [],
@@ -411,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "1a6e6d40-3083-405f-84e8-039161dfafac",
    "metadata": {},
    "outputs": [],
@@ -864,6 +858,110 @@
     "\n",
     "Reuse the code from Exercise 1 to build and run an MLP with one hidden layer, as big a you can. Compare the performance of your design with the results appearing in Table 1 of [https://arxiv.org/pdf/1611.03530.pdf] for an MLP of 512 units in a single hidden layer. Report the best result found for a maximum of 1000 epochs or 2 hours CPU running time.\n",
     "The best accuracy amongst all teams will be awarded extra points."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4c5b3593-687b-4971-9af4-2170add81de4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we need to augment our data to improve the model's performance, otherwise it'll get stuck like models from exercise 1\n",
+    "datagen = ImageDataGenerator(rotation_range=15, horizontal_flip=True) # randomly rotates the image by up to 45 degrees and/or flips it horizontally\n",
+    "datagen.fit(train_images)\n",
+    "# we have to have an actual validation set for this, we cannot evaluate the model properly otherwise\n",
+    "train_images, val_images, train_labels, val_labels = train_test_split(\n",
+    "    train_images, train_labels, test_size=0.2, random_state=RNDS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f51b413-d97a-476c-ac25-1fbf4a8b75fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1000\n",
+      "1000/1000 [==============================] - 12s 11ms/step - loss: 2.7904 - accuracy: 0.1166 - f1_score: 6.4953 - val_loss: 2.0304 - val_accuracy: 0.0523 - val_f1_score: 6.2926\n",
+      "Epoch 2/1000\n",
+      "1000/1000 [==============================] - 12s 12ms/step - loss: 2.0429 - accuracy: 0.1193 - f1_score: 6.6545 - val_loss: 2.0218 - val_accuracy: 0.0734 - val_f1_score: 6.8329\n",
+      "Epoch 3/1000\n",
+      "1000/1000 [==============================] - 11s 11ms/step - loss: 2.0041 - accuracy: 0.1138 - f1_score: 6.5231 - val_loss: 1.9409 - val_accuracy: 0.1142 - val_f1_score: 6.1373\n",
+      "Epoch 4/1000\n",
+      "1000/1000 [==============================] - 11s 11ms/step - loss: 1.9945 - accuracy: 0.1126 - f1_score: 6.4063 - val_loss: 1.9831 - val_accuracy: 0.2490 - val_f1_score: 6.2690\n",
+      "Epoch 5/1000\n",
+      "1000/1000 [==============================] - 12s 12ms/step - loss: 1.9783 - accuracy: 0.1142 - f1_score: 6.3713 - val_loss: 1.9377 - val_accuracy: 0.1297 - val_f1_score: 5.9846\n",
+      "Epoch 6/1000\n",
+      "1000/1000 [==============================] - 11s 11ms/step - loss: 1.9708 - accuracy: 0.1130 - f1_score: 6.2426 - val_loss: 2.0811 - val_accuracy: 0.1219 - val_f1_score: 6.9855\n",
+      "Epoch 7/1000\n",
+      "1000/1000 [==============================] - 12s 12ms/step - loss: 1.9610 - accuracy: 0.1097 - f1_score: 6.2672 - val_loss: 1.9663 - val_accuracy: 0.1009 - val_f1_score: 6.4993\n",
+      "Epoch 8/1000\n",
+      "1000/1000 [==============================] - 11s 11ms/step - loss: 1.9542 - accuracy: 0.1112 - f1_score: 6.2685 - val_loss: 1.9111 - val_accuracy: 0.0950 - val_f1_score: 6.1892\n",
+      "Epoch 9/1000\n",
+      " 380/1000 [==========>...................] - ETA: 6s - loss: 1.9411 - accuracy: 0.1225 - f1_score: 6.1466"
+     ]
+    }
+   ],
+   "source": [
+    "weight_decay = 0.01\n",
+    "num_epochs = 1000 # to be within 2 CPU hours\n",
+    "\n",
+    "# redefine our 1 layer model\n",
+    "mlp_1_layer = models.Sequential([\n",
+    "    layers.Flatten(),\n",
+    "    layers.Dense(512, activation='relu', kernel_regularizer=regularizers.l2(weight_decay)),\n",
+    "    layers.Dense(10, activation='softmax', kernel_regularizer=regularizers.l2(weight_decay))\n",
+    "])\n",
+    "\n",
+    "mlp_1_layer.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy', f1_score])\n",
+    "\n",
+    "early_stop = EarlyStopping(monitor='val_accuracy', patience=num_epochs // 20) # since we're interested in accuracy now\n",
+    "checkpoint = ModelCheckpoint('./models/ass5_mlp_1_layer.h5', monitor='val_accuracy', save_best_only=True)\n",
+    "\n",
+    "history_mlp_1_layer = mlp_1_layer.fit(datagen.flow(train_images, train_labels, batch_size=32),\n",
+    "                                     epochs=num_epochs,\n",
+    "                                     validation_data=(val_images, val_labels),\n",
+    "                                     callbacks=[early_stop, checkpoint],\n",
+    "                                     steps_per_epoch=len(train_images) // 32) # number of batches per epoch\n",
+    "\n",
+    "best_model = load_model('./models/ass5_mlp_1_layer.h5')\n",
+    "test_loss, test_acc, test_f1 = best_model.evaluate(test_images, test_labels)\n",
+    "print(f\"Test Accuracy: {test_acc*100:.4f}%\", f\"Test F1-Score: {test_f1:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "656d2818-32fb-4107-b0b3-a082a9351897",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plotting\n",
+    "plt.figure(figsize=(12, 5))\n",
+    "# accuracy\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(history_mlp_1_layer.history['accuracy'], label='accuracy')\n",
+    "plt.plot(history_mlp_1_layer.history['val_accuracy'], label='validation accuracy')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.title('Accuracy vs. Epoch')\n",
+    "# F1-score\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(history_mlp_1_layer.history['f1_score'], label='F1-score')\n",
+    "plt.plot(history_mlp_1_layer.history['val_f1_score'], label='validation F1-score')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('F1-score')\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.title('F1-score vs. Epoch')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
